--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronomentro</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
     <img src="./assets/imagem-missao.png" alt="Foto de um cronometro" >
-    <span>00</span>
-    <span>:</span>
-    <span>00</span>
-    <span>:</span>
-    <span>00</span>
-    <span>:</span>
-    <span>01</span>
+    <div id="caixaNumeros">
+    <span class="numeros">00</span>
+    <span class="numeros">:</span>
+    <span class="numeros">00</span>
+    <span class="numeros">:</span>
+    <span class="numeros">00</span>
+    <span class="numeros">:</span>
+    <span class="numeros numero-verde">01</span>
+</div>
+<div id="caixaBotoes">
     <button>Start</button>
     <button>Stop</button>
     <button>Reset</button>
-    
+</div>
+
 </body>
 </html>
