--- a/index.html
+++ b/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="pt-br">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronomentro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
     <link href="./styles.css" rel="stylesheet">
 </head>
-<body>
-    <img src="./assets/imagem-missao.png" alt="Foto de um cronometro" >
-    <div id="caixaNumeros">
-    <span class="numeros">00</span>
-    <span class="numeros">:</span>
-    <span class="numeros">00</span>
-    <span class="numeros">:</span>
-    <span class="numeros">00</span>
-    <span class="numeros">:</span>
-    <span class="numeros numero-verde">01</span>
-</div>
-<div id="caixaBotoes">
-    <button>Start</button>
-    <button>Stop</button>
-    <button>Reset</button>
-</div>
 
+<body>
+    <img src="./assets/imagem-missao.png" alt="Foto de um cronometro">
+    <div id="caixaNumeros">
+        <span class="numeros" id="horas">00</span>
+        <span class="numeros">:</span>
+        <span class="numeros" id="minutos">00</span>
+        <span class="numeros">:</span>
+        <span class="numeros" id="segundos">00</span>
+        <span class="numeros">:</span>
+        <span class="numeros numero-verde" id="mili">01</span>
+    </div>
+    <div id="caixaBotoes">
+        <button class="botoes" id="start">Start</button>
+        <button class="botoes">Stop</button>
+        <button class="botoes">Reset</button>
+    </div>
 </body>
+
+<script>
+    let btnStart = document.getElementById ("start")
+    let mili = document.getElementById ("mili")
+    let segundos = document.getElementById ("segundos")
+    let minutos = document.getElementById ("minutos")
+    let horas = document.getElementById ("horas")
+
+    let startTimer
+    let ms = 0
+    let seg = 0
+    let min = 0
+    let hr = 0
+
+    // Essa função dispara o timer, e é chamada quando eu clico no botão START
+    function start() {
+        startTimer = setInterval(function () {
+            ms++
+            atualizaValor()
+        }, 10);
+
+    }
+
+    function atualizaValor() {
+        mili.innerHTML = ms
+    }
+
+    btnStart.addEventListener("click", start)
+
+</script>
+
 </html>
