--- a/index.html
+++ b/index.html
@@ -39,15 +39,37 @@
     let horas = document.getElementById ("horas")
 
     let startTimer
-    let ms = 0
-    let seg = 0
-    let min = 0
-    let hr = 0
+    let ms = "00"
+    let seg = "00"
+    let min = "00"
+    let hr = "00"
 
     // Essa função dispara o timer, e é chamada quando eu clico no botão START
     function start() {
         startTimer = setInterval(function () {
             ms++
+
+            if(ms == 100){
+                seg++
+
+                if(seg <10){
+                    seg = "0" +seg
+                }
+                ms = 0
+            }
+
+            if(seg == 60)
+            {
+                min++
+                seg=0
+            }
+
+            if(min == 60)
+            {
+                hr++
+                min=0
+            }
+
             atualizaValor()
         }, 10);
 
@@ -55,9 +77,13 @@
 
     function atualizaValor() {
         mili.innerHTML = ms
+        segundos.innerHTML = seg
+        minutos.innerHTML = min
     }
 
     btnStart.addEventListener("click", start)
+
+
 
 </script>
 
