--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
         <span class="numeros">:</span>
         <span class="numeros" id="segundos">00</span>
         <span class="numeros">:</span>
-        <span class="numeros numero-verde" id="mili">01</span>
+        <span class="numeros numero-verde" id="mili">00</span>
     </div>
     <div id="caixaBotoes">
         <button class="botoes" id="start">Start</button>
-        <button class="botoes">Stop</button>
-        <button class="botoes">Reset</button>
+        <button class="botoes" id="stop">Stop</button>
+        <button class="botoes" id="reset">Reset</button>
     </div>
 </body>
 
 <script>
-    let btnStart = document.getElementById ("start")
-    let mili = document.getElementById ("mili")
-    let segundos = document.getElementById ("segundos")
-    let minutos = document.getElementById ("minutos")
-    let horas = document.getElementById ("horas")
+    let btnStart = document.getElementById("start")
+    let mili = document.getElementById("mili")
+    let segundos = document.getElementById("segundos")
+    let minutos = document.getElementById("minutos")
+    let horas = document.getElementById("horas")
+    let btnstop = document.getElementById("stop")
+    let btnReset = document.getElementById("reset")
 
     let startTimer
     let ms = "00"
@@ -47,42 +49,74 @@
     // Essa função dispara o timer, e é chamada quando eu clico no botão START
     function start() {
         startTimer = setInterval(function () {
-            ms++
 
-            if(ms == 100){
+            ms++
+            if (ms < 10) {
+                ms = "0" + ms
+            }
+
+            if (ms == 100) {
                 seg++
 
-                if(seg <10){
-                    seg = "0" +seg
+                if (seg < 10) {
+                    seg = "0" + seg
                 }
                 ms = 0
             }
 
-            if(seg == 60)
-            {
+            if (seg == 60) {
                 min++
-                seg=0
+
+                if (min < 10) {
+                    min = "0" + min
+                }
+                seg = 0
             }
 
-            if(min == 60)
-            {
+            if (min == 60) {
                 hr++
-                min=0
+                if (hr < 10) {
+                    hr = "0" + hr
+                }
+                min = 0
             }
+            btnStart.classList.add("ativo")
+            btnstop.classList.remove("ativo")
 
             atualizaValor()
         }, 10);
 
     }
 
+    function stop() {
+        clearInterval(startTimer)
+        btnstop.classList.add("ativo")
+        btnStart.classList.remove("ativo")
+    }
+
+    function reset() {
+        clearInterval(startTimer)
+        ms = "00"
+        seg = "00"
+        min = "00"
+        hr = "00"
+        atualizaValor()
+        btnstop.classList.remove("ativo")
+        btnStart.classList.remove("ativo")
+
+    }
+
+
     function atualizaValor() {
         mili.innerHTML = ms
         segundos.innerHTML = seg
         minutos.innerHTML = min
+        horas.innerHTML == hr
     }
 
     btnStart.addEventListener("click", start)
-
+    btnstop.addEventListener("click", stop)
+    btnReset.addEventListener("click", reset)
 
 
 </script>
